- fixed editProfile component

--- a/src/app/layout/profile/profile-edit-view/profile-edit-view.component.html
+++ b/src/app/layout/profile/profile-edit-view/profile-edit-view.component.html
@@ -36,7 +36,7 @@
             <div class="item-content no-padding no-margin">
               <span class="title">Full Name</span>
               <div class="input-group">
-                <input type="text">
+                <input type="text" [(ngModel)]="userProfile.full_name">
                 <span class="fa fa-pencil"></span>
               </div>
             </div>
@@ -54,6 +54,7 @@
               [items]="specialities"
               bindLabel="name"
               bindValue="id"
+              [(ngModel)]="userProfile.specialty.id"
               class="select-item"
               placeholder="Select Speciality">
             </ng-select>
@@ -80,39 +81,41 @@
     <div class="section-container">
       <div class="info-container">
         <p class="title">Experience</p>
-        <div class="body-wrapper" *ngIf="userProfile?.experiences.length; else noExperience">
-          <div class="body-item-wrapper" *ngFor="let experience of userProfile?.experiences">
-            <div class="icon-body-item gray-background">
-              <img src="./assets/images/icons/icon_experience_active.png">
+        <div class="body-wrapper" *ngIf="userProfile?.experiences.length && userProfile?.experiences[0].id; else noExperience">
+          <div *ngFor="let experience of userProfile?.experiences">
+            <div class="body-item-wrapper">
+              <div class="icon-body-item gray-background">
+                <img src="./assets/images/icons/icon_experience_active.png">
+              </div>
+              <div class="item-content">
+                <span class="title">{{experience.practice_Role?.name}}</span>
+                <span class="content">{{experience.practice_DSO?.name}}</span>
+                <span class="content" *ngIf="experience?.end_time">
+                  {{experience?.start_time | date:"MMM yyyy":'+0000'}} - {{experience?.end_time | date:"MMM yyyy":'+0000'}}
+                </span>
+                <span class="content" *ngIf="!experience?.end_time">
+                  {{experience?.start_time | date:"MMM yyyy":'+0000'}} - Present
+                </span>
+              </div>
+              <div class="icon-add-new" *ngIf="!isAddNewExperience" (click)="isAddNewExperience = true">
+                <img src="./assets/images/icons/icon_add_new.png">
+              </div>
+              <div class="icon-add-new" *ngIf="isAddNewExperience" (click)="isAddNewExperience = false">
+                <img src="./assets/images/icons/icon_close_new.png">
+              </div>
             </div>
-            <div class="item-content">
-              <span class="title">{{experience.practice_Role?.name}}</span>
-              <span class="content">{{experience.practice_DSO?.name}}</span>
-              <span class="content" *ngIf="experience?.end_time">
-                {{experience?.start_time | date:"MMM yyyy":'+0000'}} - {{experience?.end_time | date:"MMM yyyy":'+0000'}}
-              </span>
-              <span class="content" *ngIf="!experience?.end_time">
-                {{experience?.start_time | date:"MMM yyyy":'+0000'}} - Present
-              </span>
+            <div class="add-new-item-container">
+              <dsod-add-new-experience
+                [show]="isAddNewExperience"
+                [experience]="experience">
+              </dsod-add-new-experience>
             </div>
-            <div class="icon-add-new" *ngIf="!isAddNewExperience" (click)="isAddNewExperience = true">
-              <img src="./assets/images/icons/icon_add_new.png">
-            </div>
-            <div class="icon-add-new" *ngIf="isAddNewExperience" (click)="isAddNewExperience = false">
-              <img src="./assets/images/icons/icon_close_new.png">
-            </div>
-          </div>
-          <div class="add-new-item-container">
-            <dsod-add-new-experience
-              [show]="isAddNewExperience"
-            >
-            </dsod-add-new-experience>
           </div>
         </div>
         <ng-template #noExperience>
           <div class="body-wrapper">
             <div class="body-item-wrapper">
-              <div class="icon-body-item gray-background">
+              <div class="icon-body-item gray-background" (click)="onCheck()">
                 <img src="./assets/images/icons/icon_experience_active.png">
               </div>
               <div class="item-content">
@@ -126,7 +129,10 @@
               </div>
             </div>
             <div class="add-new-item-container">
-              <dsod-add-new-experience [show]="isAddNewExperience"></dsod-add-new-experience>
+              <dsod-add-new-experience
+                [show]="isAddNewExperience"
+                [experience]="userProfile.experiences[0]">
+              </dsod-add-new-experience>
             </div>
           </div>
         </ng-template>
@@ -135,29 +141,34 @@
     <div class="section-container">
       <div class="info-container">
         <p class="title">Residency</p>
-        <div class="body-wrapper" *ngIf="userProfile?.profileResidency.length; else noResidency">
-          <div class="body-item-wrapper" *ngFor="let residency of userProfile?.profileResidency">
-            <div class="icon-body-item gray-background">
-              <img src="./assets/images/icons/icon_location_active.png">
+        <div class="body-wrapper" *ngIf="userProfile?.profileResidency.length && userProfile?.profileResidency[0].id; else noResidency">
+          <div *ngFor="let residency of userProfile?.profileResidency">
+            <div class="body-item-wrapper">
+              <div class="icon-body-item gray-background">
+                <img src="./assets/images/icons/icon_location_active.png">
+              </div>
+              <div class="item-content">
+                <span class="title">{{residency.residency_School?.name}}</span>
+                <span class="content" *ngIf="residency?.end_time">
+                  {{residency?.start_time | date:"MMM yyyy":'+0000'}} - {{residency?.end_time | date:"MMM yyyy":'+0000'}}
+                </span>
+                <span class="content" *ngIf="!residency?.end_time">
+                  {{residency?.start_time | date:"MMM yyyy":'+0000'}} - Present
+                </span>
+              </div>
+              <div class="icon-add-new" *ngIf="!isAddNewResidency" (click)="isAddNewResidency = true">
+                <img src="./assets/images/icons/icon_add_new.png">
+              </div>
+              <div class="icon-add-new" *ngIf="isAddNewResidency" (click)="isAddNewResidency = false">
+                <img src="./assets/images/icons/icon_close_new.png">
+              </div>
             </div>
-            <div class="item-content">
-              <span class="title">{{residency.dental_School?.name}}</span>
-              <span class="content" *ngIf="residency?.end_time">
-                {{residency?.start_time | date:"MMM yyyy":'+0000'}} - {{residency?.end_time | date:"MMM yyyy":'+0000'}}
-              </span>
-              <span class="content" *ngIf="!residency?.end_time">
-                {{residency?.start_time | date:"MMM yyyy":'+0000'}} - Present
-              </span>
+            <div class="add-new-item-container">
+              <dsod-add-new-residency
+                [show]="isAddNewResidency"
+                [residency]="residency">
+              </dsod-add-new-residency>
             </div>
-            <div class="icon-add-new" *ngIf="!isAddNewResidency" (click)="isAddNewResidency = true">
-              <img src="./assets/images/icons/icon_add_new.png">
-            </div>
-            <div class="icon-add-new" *ngIf="isAddNewResidency" (click)="isAddNewResidency = false">
-              <img src="./assets/images/icons/icon_close_new.png">
-            </div>
-          </div>
-          <div class="add-new-item-container">
-            <dsod-add-new-residency [show]="isAddNewResidency"></dsod-add-new-residency>
           </div>
         </div>
         <ng-template #noResidency>
@@ -177,7 +188,10 @@
               </div>
             </div>
             <div class="add-new-item-container">
-              <dsod-add-new-residency [show]="isAddNewResidency"></dsod-add-new-residency>
+              <dsod-add-new-residency
+                [show]="isAddNewResidency"
+                [residency]="userProfile.profileResidency[0]">
+              </dsod-add-new-residency>
             </div>
           </div>
         </ng-template>
@@ -186,29 +200,34 @@
     <div class="section-container">
       <div class="info-container">
         <p class="title">Education</p>
-        <div class="body-wrapper" *ngIf="userProfile?.educations.length; else noEducation">
-          <div class="body-item-wrapper" *ngFor="let education of userProfile?.educations">
-            <div class="icon-body-item gray-background">
-              <img src="./assets/images/icons/icon_education_active.png">
+        <div class="body-wrapper" *ngIf="userProfile?.educations.length && userProfile?.educations[0].id; else noEducation">
+          <div *ngFor="let education of userProfile?.educations">
+            <div class="body-item-wrapper">
+              <div class="icon-body-item gray-background">
+                <img src="./assets/images/icons/icon_education_active.png">
+              </div>
+              <div class="item-content">
+                <span class="title">{{education.school_name}}</span>
+                <span class="content" *ngIf="education?.end_time">
+                  {{education?.start_time | date:"MMM yyyy":'+0000'}} - {{education?.end_time | date:"MMM yyyy":'+0000'}}
+                </span>
+                <span class="content" *ngIf="!education?.end_time">
+                  {{education?.start_time | date:"MMM yyyy":'+0000'}} - Present
+                </span>
+              </div>
+              <div class="icon-add-new" *ngIf="!isAddNewEducation" (click)="isAddNewEducation = true">
+                <img src="./assets/images/icons/icon_add_new.png">
+              </div>
+              <div class="icon-add-new" *ngIf="isAddNewEducation" (click)="isAddNewEducation = false">
+                <img src="./assets/images/icons/icon_close_new.png">
+              </div>
             </div>
-            <div class="item-content">
-              <span class="title">{{education.school_name}}</span>
-              <span class="content" *ngIf="education?.end_time">
-                {{education?.start_time | date:"MMM yyyy":'+0000'}} - {{education?.end_time | date:"MMM yyyy":'+0000'}}
-              </span>
-              <span class="content" *ngIf="!education?.end_time">
-                {{education?.start_time | date:"MMM yyyy":'+0000'}} - Present
-              </span>
+            <div class="add-new-item-container">
+              <dsod-add-new-education
+                [show]="isAddNewEducation"
+                [education]="education">
+              </dsod-add-new-education>
             </div>
-            <div class="icon-add-new" *ngIf="!isAddNewEducation" (click)="isAddNewEducation = true">
-              <img src="./assets/images/icons/icon_add_new.png">
-            </div>
-            <div class="icon-add-new" *ngIf="isAddNewEducation" (click)="isAddNewEducation = false">
-              <img src="./assets/images/icons/icon_close_new.png">
-            </div>
-          </div>
-          <div class="add-new-item-container">
-            <dsod-add-new-education [show]="isAddNewEducation"></dsod-add-new-education>
           </div>
         </div>
         <ng-template #noEducation>
@@ -228,7 +247,10 @@
               </div>
             </div>
             <div class="add-new-item-container">
-              <dsod-add-new-education [show]="isAddNewEducation"></dsod-add-new-education>
+              <dsod-add-new-education
+                [show]="isAddNewEducation"
+                [education]="userProfile.educations[0]">
+              </dsod-add-new-education>
             </div>
           </div>
         </ng-template>
