--- a/src/app/layout/profile/profile-panel/profile-panel.component.scss
+++ b/src/app/layout/profile/profile-panel/profile-panel.component.scss
@@ -11,7 +11,7 @@
     width: 400px;
     min-height: 500px;
     z-index: 9;
-    background-color: $kelp-8;
+    background-color: $black-8;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     transition: ease right 500ms;
