--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -30,6 +30,7 @@ $mine_grey: #333333;
 $emulsion-grey: #191919;
 $cod_gray: #0A0A0A;
 $black: #000000;
+$black-8: rgba(0, 0, 0, 0.8);
 
 $baseFontSize: 16; // Font Family
 $neue_hgd_Black: 'Haas Grot Disp 95';
