--- a/src/app/shared/components/add-new-education/add-new-education.component.html
+++ b/src/app/shared/components/add-new-education/add-new-education.component.html
@@ -5,6 +5,7 @@
       <ng-select
         class="custom-select"
         [items]="detenSchoolList"
+        [(ngModel)]="education.dental_school.id"
         appendTo="body"
         bindLabel="name"
         bindValue="id"
@@ -16,7 +17,7 @@
   <div class="new-item-container">
     <span class="title">Year of Graduation</span>
     <div class="input-group">
-      <input type="text">
+      <input type="text" [(ngModel)]="education.end_time">
       <span class="fa fa-pencil"></span>
     </div>
   </div>
