--- a/src/app/shared/components/add-new-experience/add-new-experience.component.scss
+++ b/src/app/shared/components/add-new-experience/add-new-experience.component.scss
@@ -12,33 +12,41 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    .title {
-      margin: 0;
-    }
-    .date-control {
-      padding: 0 10px;
-      .input-date-time {
-        width: 1%;
-        padding: 5px 10px;
-        background-color: transparent;
-        border: none;
-        flex: 1 1 auto;
-        border: none;
-        background-color: transparent;
-        color: $color-white;
-        padding: 0;
-        outline: none;
-        min-height: 25px;
-        border-bottom: 1px solid $gray;
-        &::placeholder {
-          color: $gray;
-        }
+    .date-picker-container {
+      flex: 1 1 50%;
+      .title {
+        margin: 0;
       }
-      .icon-calendar-wrap {
-        display: flex;
-        align-items: center;
-        padding: 5px;
-        cursor: pointer;
+      .date-control {
+        padding: 0 10px;
+        .input-date-time {
+          width: 1%;
+          padding: 5px 10px;
+          background-color: transparent;
+          border: none;
+          flex: 1 1 auto;
+          border: none;
+          background-color: transparent;
+          color: $color-white;
+          padding: 0;
+          outline: none;
+          min-height: 25px;
+          border-bottom: 1px solid $gray;
+          &::placeholder {
+            color: $gray;
+          }
+        }
+        .icon-calendar-wrap {
+          display: flex;
+          align-items: center;
+          padding: 5px;
+          cursor: pointer;
+        }
+        span {
+          height: 30px;
+          display: flex;
+          align-items: center;
+        }
       }
     }
   }
