--- a/src/app/layout/profile/profile-view/profile-view.component.html
+++ b/src/app/layout/profile/profile-view/profile-view.component.html
@@ -60,7 +60,7 @@
               <img src="./assets/images/icons/icon_location_active.png">
             </div>
             <div class="item-content">
-              <span class="title">{{residency.dental_School?.name}}</span>
+              <span class="title">{{residency.residency_School?.name}}</span>
               <span class="content" *ngIf="residency?.end_time">
                 {{residency?.start_time | date:"MMM yyyy":'+0000'}} - {{residency?.end_time | date:"MMM yyyy":'+0000'}}
               </span>
