--- a/src/app/layout/profile/profile-edit-view/profile-edit-view.component.html
+++ b/src/app/layout/profile/profile-edit-view/profile-edit-view.component.html
@@ -264,13 +264,29 @@
             <div class="icon-body-item">
               <img src="./assets/images/icons/icon_location.png">
             </div>
-            <div class="item-content no-padding">
+            <div class="item-content" *ngIf="userProfile?.practiceAddress; else noPracticeAddress">
               <span class="title">Practice Address</span>
-              <div class="input-group">
-                <input type="text">
-                <span class="fa fa-pencil"></span>
-              </div>
+              <span class="content">{{userProfile?.practiceAddress.address1}} {{userProfile?.practiceAddress.address2}}</span>
+              <span class="content">{{userProfile?.practiceAddress.city}} {{userProfile?.practiceAddress.states}} {{userProfile?.practiceAddress.zipCode}}</span>
             </div>
+            <ng-template #noPracticeAddress>
+              <div class="item-content">
+                <span class="title">Practice Address</span>
+                <span class="content">No Address added yet.</span>
+              </div>
+            </ng-template>
+            <div class="icon-add-new" *ngIf="!isAddNewAddress" (click)="isAddNewAddress = true">
+              <img src="./assets/images/icons/icon_add_new.png">
+            </div>
+            <div class="icon-add-new" *ngIf="isAddNewAddress" (click)="isAddNewAddress = false">
+              <img src="./assets/images/icons/icon_close_new.png">
+            </div>
+          </div>
+          <div class="add-new-item-container">
+            <dsod-add-new-address
+              [show]="isAddNewAddress"
+              [address]="userProfile.practiceAddress">
+            </dsod-add-new-address>
           </div>
           <div class="body-item-wrapper">
             <div class="icon-body-item">
@@ -279,7 +295,7 @@
             <div class="item-content no-padding">
               <span class="title">Mobile Number</span>
               <div class="input-group">
-                <input type="text">
+                <input type="text" [(ngModel)]="userProfile.phone">
                 <span class="fa fa-pencil"></span>
               </div>
             </div>
@@ -291,7 +307,7 @@
             <div class="item-content no-padding">
               <span class="title">Primary Email Address</span>
               <div class="input-group">
-                <input type="text">
+                <input type="text" [(ngModel)]="userProfile.email">
                 <span class="fa fa-pencil"></span>
               </div>
             </div>
