--- a/src/app/shared/components/add-new-experience/add-new-experience.component.html
+++ b/src/app/shared/components/add-new-experience/add-new-experience.component.html
@@ -58,7 +58,7 @@
           class="input-date-time"
           [container]="'body'"
           placeholder="yyyy-mm-dd"
-          [(ngModel)]="experience.start_time"
+          [(ngModel)]="startTime"
           name="dp"
           ngbDatepicker
           #from="ngbDatepicker">
@@ -74,7 +74,7 @@
           class="input-date-time"
           [container]="'body'"
           placeholder="yyyy-mm-dd"
-          [(ngModel)]="experience.end_time"
+          [(ngModel)]="endTime"
           name="dp"
           ngbDatepicker
           #to="ngbDatepicker">
