--- a/src/app/shared/components/reviews/add-review/add-review-modal.component.html
+++ b/src/app/shared/components/reviews/add-review/add-review-modal.component.html
@@ -15,7 +15,7 @@
     <span class="user-ico">
       <i class="fa fa-user" aria-hidden="true"></i>
     </span>
-    <h4>Writing review as <b>{{loggedInUser.contact_email}}</b></h4>
+    <h4>Writing review as <b>{{loggedInUser.email}}</b></h4>
   </div>
   <div class="review-form">
     <form #f="ngForm" (ngSubmit)="submitReview()">
