--- a/src/app/shared/components/add-new-residency/add-new-residency.component.scss
+++ b/src/app/shared/components/add-new-residency/add-new-residency.component.scss
@@ -7,25 +7,40 @@
   &.show {
     max-height: 500px;
   }
-  .title {
-    margin-bottom: 5px;
-    font-size: 16px;
-  }
-  .input-group {
-    border-bottom: 1px solid $gray;
-    align-items: center;
-    input {
-      position: relative;
-      flex: 1 1 auto;
-      border: none;
-      background-color: transparent;
-      color: $alto;
-      padding: 0;
-      outline: none;
-      min-height: 25px;
+  .date-picker-container {
+    .title {
+      margin: 0;
     }
-    span {
-      font-size: 18px;
+    .date-control {
+      padding: 0 10px;
+      .input-date-time {
+        width: 1%;
+        padding: 5px 10px;
+        background-color: transparent;
+        border: none;
+        flex: 1 1 auto;
+        border: none;
+        background-color: transparent;
+        color: $color-white;
+        padding: 0;
+        outline: none;
+        min-height: 25px;
+        border-bottom: 1px solid $gray;
+        &::placeholder {
+          color: $gray;
+        }
+      }
+      .icon-calendar-wrap {
+        display: flex;
+        align-items: center;
+        padding: 5px;
+        cursor: pointer;
+      }
+      span {
+        height: 30px;
+        display: flex;
+        align-items: center;
+      }
     }
   }
 }
