--- a/src/app/shared/components/audio-player/audio-player.component.html
+++ b/src/app/shared/components/audio-player/audio-player.component.html
@@ -1,7 +1,7 @@
 <ng-template #l>
   Loading
 </ng-template>
-<div class="podcast-player" *ngIf="isLoading; let l else loaded">
+<div class="podcast-player" *ngIf="isLoading; let l">
   <div class="visualizer">
     <div class="row">
       <div class="col-md-8">
