- implemented profile info updates feature

--- a/src/app/layout/profile/profile-edit-view/profile-edit-view.component.scss
+++ b/src/app/layout/profile/profile-edit-view/profile-edit-view.component.scss
@@ -23,6 +23,9 @@
             &.upload-resume-background {
               background-color: $color-alert;
             }
+            .icon-admin-console {
+              font-size: 20px;
+            }
           }
           .item-content {
             border-bottom: none;
