--- a/src/app/layout/profile/profile-view/profile-view.component.html
+++ b/src/app/layout/profile/profile-view/profile-view.component.html
@@ -164,5 +164,20 @@
         </div>
       </div>
     </div>
+    <div class="section-container">
+      <div class="info-container">
+        <p class="title">Admin Console</p>
+        <div class="body-wrapper">
+          <div class="body-item-wrapper">
+            <div class="icon-body-item gray-background">
+              <i class="icon-admin-console fa fa-cogs"></i>
+            </div>
+            <div class="item-content">
+              <span class="content">Access Administrator Controls</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
