--- a/src/assets/styles/base/_buttons.scss
+++ b/src/assets/styles/base/_buttons.scss
@@ -6,4 +6,9 @@
   color: $color_white;
   border-radius: 0;
   font-size: 20px;
+  outline: none;
+  &:focus {
+    outline: none;
+    box-shadow: none;
+  }
 }
