--- a/src/assets/styles/base/_profile.scss
+++ b/src/assets/styles/base/_profile.scss
@@ -32,6 +32,7 @@
       line-height: 1.2;
       &:last-child {
         border-bottom: none;
+        padding-bottom: 30px;
       }
       .userInfo-container {
         display: flex;
