--- a/src/app/layout/profile/profile-edit-view/profile-edit-view.component.html
+++ b/src/app/layout/profile/profile-edit-view/profile-edit-view.component.html
@@ -81,210 +81,44 @@
     <div class="section-container">
       <div class="info-container">
         <p class="title">Experience</p>
-        <div class="body-wrapper" *ngIf="userProfile?.experiences.length; else noExperience">
-          <div *ngFor="let experience of userProfile?.experiences">
-            <div class="body-item-wrapper">
-              <div class="icon-body-item gray-background" (click)="onCheck()">
-                <img src="./assets/images/icons/icon_experience_active.png">
-              </div>
-              <div class="item-content">
-                <span class="title">{{experience.practice_Role?.name}}</span>
-                <span class="content">{{experience.practice_DSO?.name}}</span>
-                <span class="content" *ngIf="experience.end_time">
-                  {{experience?.start_time | date:"MMM yyyy"}} - {{experience?.end_time | date:"MMM yyyy"}}
-                </span>
-                <span class="content" *ngIf="!experience.end_time">
-                  {{experience?.start_time | date:"MMM yyyy"}} - Present
-                </span>
-              </div>
-              <div class="icon-add-new" *ngIf="!isAddNewExperience" (click)="isAddNewExperience = true">
-                <img src="./assets/images/icons/icon_add_new.png">
-              </div>
-              <div class="icon-add-new" *ngIf="isAddNewExperience" (click)="isAddNewExperience = false">
-                <img src="./assets/images/icons/icon_close_new.png">
-              </div>
-            </div>
-            <div class="add-new-item-container">
-              <dsod-add-new-experience
-                [show]="isAddNewExperience"
-                [experience]="experience"
-                (updateExperience)="updateExperience($event)">
-              </dsod-add-new-experience>
-            </div>
-          </div>
+        <div class="body-wrapper">
+          <dsod-profile-experience
+            [experiences]="userProfile.experiences"
+            (updateExperience)="updateExperience($event)">
+          </dsod-profile-experience>
         </div>
-        <ng-template #noExperience>
-          <div class="body-wrapper">
-            <div class="body-item-wrapper">
-              <div class="icon-body-item gray-background" (click)="onCheck()">
-                <img src="./assets/images/icons/icon_experience_active.png">
-              </div>
-              <div class="item-content">
-                <span class="content">No experience added yet.</span>
-              </div>
-              <div class="icon-add-new" *ngIf="!isAddNewExperience" (click)="isAddNewExperience = true">
-                <img src="./assets/images/icons/icon_add_new.png">
-              </div>
-              <div class="icon-add-new" *ngIf="isAddNewExperience" (click)="isAddNewExperience = false">
-                <img src="./assets/images/icons/icon_close_new.png">
-              </div>
-            </div>
-            <div class="add-new-item-container">
-              <dsod-add-new-experience
-                [show]="isAddNewExperience"
-                (updateExperience)="addNewExperience($event)">
-              </dsod-add-new-experience>
-            </div>
-          </div>
-        </ng-template>
       </div>
     </div>
     <div class="section-container">
       <div class="info-container">
         <p class="title">Residency</p>
-        <div class="body-wrapper" *ngIf="userProfile?.profileResidency.length; else noResidency">
-          <div *ngFor="let residency of userProfile?.profileResidency">
-            <div class="body-item-wrapper">
-              <div class="icon-body-item gray-background">
-                <img src="./assets/images/icons/icon_location_active.png">
-              </div>
-              <div class="item-content">
-                <span class="title">{{residency.residency_School?.name}}</span>
-                <span class="content" *ngIf="residency?.end_time">
-                  {{residency?.end_time | date:"yyyy"}}
-                </span>
-              </div>
-              <div class="icon-add-new" *ngIf="!isAddNewResidency" (click)="isAddNewResidency = true">
-                <img src="./assets/images/icons/icon_add_new.png">
-              </div>
-              <div class="icon-add-new" *ngIf="isAddNewResidency" (click)="isAddNewResidency = false">
-                <img src="./assets/images/icons/icon_close_new.png">
-              </div>
-            </div>
-            <div class="add-new-item-container">
-              <dsod-add-new-residency
-                [show]="isAddNewResidency"
-                [residency]="residency"
-                (updateResidency)="updateResidency($event)">
-              </dsod-add-new-residency>
-            </div>
-          </div>
+        <div class="body-wrapper">
+          <dsod-profile-residency
+            [residencies]="userProfile.profileResidency"
+            (updateResidency)="updateResidency($event)">
+          </dsod-profile-residency>
         </div>
-        <ng-template #noResidency>
-          <div class="body-wrapper">
-            <div class="body-item-wrapper">
-              <div class="icon-body-item gray-background">
-                <img src="./assets/images/icons/icon_location_active.png">
-              </div>
-              <div class="item-content">
-                <span class="content">No residency added yet.</span>
-              </div>
-              <div class="icon-add-new" *ngIf="!isAddNewResidency" (click)="isAddNewResidency = true">
-                <img src="./assets/images/icons/icon_add_new.png">
-              </div>
-              <div class="icon-add-new" *ngIf="isAddNewResidency" (click)="isAddNewResidency = false">
-                <img src="./assets/images/icons/icon_close_new.png">
-              </div>
-            </div>
-            <div class="add-new-item-container">
-              <dsod-add-new-residency
-                [show]="isAddNewResidency"
-                (updateResidency)="addNewResidency($event)">
-              </dsod-add-new-residency>
-            </div>
-          </div>
-        </ng-template>
       </div>
     </div>
     <div class="section-container">
       <div class="info-container">
         <p class="title">Education</p>
-        <div class="body-wrapper" *ngIf="userProfile?.educations.length; else noEducation">
-          <div *ngFor="let education of userProfile?.educations">
-            <div class="body-item-wrapper">
-              <div class="icon-body-item gray-background">
-                <img src="./assets/images/icons/icon_education_active.png">
-              </div>
-              <div class="item-content">
-                <span class="title">{{education.dental_school.name}}</span>
-                <span class="content" *ngIf="education?.end_time">
-                  {{education?.end_time | date:"yyyy"}}
-                </span>
-              </div>
-              <div class="icon-add-new" *ngIf="!isAddNewEducation" (click)="isAddNewEducation = true">
-                <img src="./assets/images/icons/icon_add_new.png">
-              </div>
-              <div class="icon-add-new" *ngIf="isAddNewEducation" (click)="isAddNewEducation = false">
-                <img src="./assets/images/icons/icon_close_new.png">
-              </div>
-            </div>
-            <div class="add-new-item-container">
-              <dsod-add-new-education
-                [show]="isAddNewEducation"
-                [education]="education"
-                (updateEducation)="updateEducation($event)">
-              </dsod-add-new-education>
-            </div>
-          </div>
+        <div class="body-wrapper">
+          <dsod-profile-education
+            [educations]="userProfile.educations"
+            (updateEducation)="updateEducation($event)">
+          </dsod-profile-education>
         </div>
-        <ng-template #noEducation>
-          <div class="body-wrapper">
-            <div class="body-item-wrapper">
-              <div class="icon-body-item gray-background">
-                <img src="./assets/images/icons/icon_education_active.png">
-              </div>
-              <div class="item-content">
-                <span class="content">No education added yet.</span>
-              </div>
-              <div class="icon-add-new" *ngIf="!isAddNewEducation" (click)="isAddNewEducation = true">
-                <img src="./assets/images/icons/icon_add_new.png">
-              </div>
-              <div class="icon-add-new" *ngIf="isAddNewEducation" (click)="isAddNewEducation = false">
-                <img src="./assets/images/icons/icon_close_new.png">
-              </div>
-            </div>
-            <div class="add-new-item-container">
-              <dsod-add-new-education
-                [show]="isAddNewEducation"
-                (updateEducation)="addNewEducation($event)">
-              </dsod-add-new-education>
-            </div>
-          </div>
-        </ng-template>
       </div>
     </div>
     <div class="section-container">
       <div class="info-container">
         <p class="title">Contact Info</p>
         <div class="body-wrapper">
-          <div class="body-item-wrapper">
-            <div class="icon-body-item">
-              <img src="./assets/images/icons/icon_location.png">
-            </div>
-            <div class="item-content" *ngIf="userProfile?.practiceAddress; else noPracticeAddress">
-              <span class="title">Practice Address</span>
-              <span class="content">{{userProfile?.practiceAddress.address1}} {{userProfile?.practiceAddress.address2}}</span>
-              <span class="content">{{userProfile?.practiceAddress.city}} {{userProfile?.practiceAddress.states}} {{userProfile?.practiceAddress.zipCode}}</span>
-            </div>
-            <ng-template #noPracticeAddress>
-              <div class="item-content">
-                <span class="title">Practice Address</span>
-                <span class="content">No Address added yet.</span>
-              </div>
-            </ng-template>
-            <div class="icon-add-new" *ngIf="!isAddNewAddress" (click)="isAddNewAddress = true">
-              <img src="./assets/images/icons/icon_add_new.png">
-            </div>
-            <div class="icon-add-new" *ngIf="isAddNewAddress" (click)="isAddNewAddress = false">
-              <img src="./assets/images/icons/icon_close_new.png">
-            </div>
-          </div>
-          <div class="add-new-item-container">
-            <dsod-add-new-address
-              [show]="isAddNewAddress"
-              [address]="userProfile.practiceAddress">
-            </dsod-add-new-address>
-          </div>
+          <dsod-profile-address
+            [address]="userProfile.practiceAddress"
+            (updateAddress)="updateAddress($event)">
+          </dsod-profile-address>
           <div class="body-item-wrapper">
             <div class="icon-body-item">
               <img src="./assets/images/icons/icon_mobile.png">
@@ -312,5 +146,21 @@
         </div>
       </div>
     </div>
+    <div class="section-container">
+      <div class="info-container">
+        <p class="title">Admin Console</p>
+        <div class="body-wrapper">
+          <div class="body-item-wrapper">
+            <div class="icon-body-item gray-background">
+              <i class="icon-admin-console fa fa-cogs"></i>
+            </div>
+            <div class="item-content">
+              <span class="content">Access Administrator Controls</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
+<ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="medium" color="#fff" type="ball-scale-multiple"></ngx-spinner>
